--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Group Project
+title: Fastpages
 description: Jupyter post with fastpages
 github_username: BuddaBaker
 # you can comment the below line out if your repo name is not different than your baseurl
-github_repo: "test"
+github_repo: "FastPages"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
-url: "https://teamname.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://BuddaBaker.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 ###########################################################
 #########  Special Instructions for baseurl ###############
@@ -34,7 +34,7 @@ url: "https://teamname.github.io" # the base hostname & protocol for your site, 
 #
 # 3. You must replace the parameter `baseurl` in _action_files/settings.ini with the same value as you set here but WITHOUT QUOTES.
 #
-baseurl: "/group" # the subpath of your site, e.g. "/blog".
+baseurl: "/Fastpages" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 
